# MiniSearchEngine

./: CMakeLists.txt  Indexer.cpp  Indexer.h  QueryProcessor.cpp  QueryProcessor.h  README.md  WebCrawler.cpp  WebCrawler.h  main.cpp
